2006/01/28	tsch

	* Cairo.pm: Add documentation for Cairo::Context, paths, patterns,
	transformations, and text.

2006/01/08	tsch

	* Cairo.pm: Make DynaLoader export all our symbols.

	* Cairo.xs, MakeHelper.pm, Makefile.PL, cairo-perl.h: Revamp the
	type conversion API.  Instead of implementing everything in the
	typemap, we now have macros like newSVCairoPattern SvCairoPattern.
	These get exported, so other modules can make use of them.

	* cairo-perl.h: Remove the DBG macro.

	* cairo-perl.typemap: Use T_UV instead of T_IV for cairo_bool_t.

2005/09/01	tsch

	* Cairo.pm, MANIFEST, Makefile.PL, NEWS, README: Release 0.02.
	Require cairo 1.0.0.

2005/08/31	tsch

	* MakeHelper.pm, Makefile.PL: Surround our _noinc typedefs for the
	PS and PDF backends with appropriate ifdefs to fix compilation
	when these backends were not installed with cairo.

2005/08/18	tsch

	* Cairo.pm: Fix incorrect package line that read GStreamer instead
	of Cairo.

2005/08/15	tsch

	* Cairo.pm, README: Release 0.01.  Also add stub documentation.

	* MANIFEST.SKIP: Remove CairoEnums.xs.

	* Makefile.PL: Add ABSTRACT_FROM to the WriteMakefile call.

	* TODO: Update to reflect the present situation.

2005/08/10	tsch

	* t/Cairo.t, Cairo.xs: Bind cairo_set_antialias and
	cairo_get_antialias.

	* t/CairoSurface.t, CairoSurface.xs: Bind cairo_surface_flush,
	cairo_surface_mark_dirty, cairo_surface_mark_dirty_rectangle.

	* MANIFEST, META.yml: Remove META.yml; let EU::MakeMaker generate
	it on "make dist".

	* Makefile.PL: Require cairo 0.9.0.  Add our prerequisites to the
	WriteMakefile call so that they appear in the generated META.yml.
	Support CAIRO_STATUS_FILE_NOT_FOUND.

2005/07/29	tsch

	* t/Cairo.t, xs/Cairo.xs: Wrap cairo_get_font_options.

	* t/CairoFont.t, xs/CairoFont.xs: Wrap cairo_font_face_status,
	cairo_scaled_font_status, cairo_font_options_*.  Update
	cairo_scaled_font_create.

	* t/CairoSurface.t, CairoSurface.xs: Wrap cairo_surface_status,
	cairo_surface_get_font_options.
