@@ -9,7 +9,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 12;
+use Test::More tests => 16;
 
 use constant {
 	IMG_WIDTH => 256,
@@ -18,9 +18,16 @@ use constant {
 
 use Cairo;
 
-my $surf = Cairo::ImageSurface->create ('rgb24', IMG_WIDTH, IMG_HEIGHT);
+my $pat = Cairo::SolidPattern->create_rgb(1.0, 0.0, 0.0);
+isa_ok ($pat, 'Cairo::SolidPattern');
+isa_ok ($pat, 'Cairo::Pattern');
 
-my $pat = Cairo::SurfacePattern->create ($surf);
+$pat = Cairo::SolidPattern->create_rgba(1.0, 0.0, 0.0, 1.0);
+isa_ok ($pat, 'Cairo::SolidPattern');
+isa_ok ($pat, 'Cairo::Pattern');
+
+my $surf = Cairo::ImageSurface->create ('rgb24', IMG_WIDTH, IMG_HEIGHT);
+$pat = Cairo::SurfacePattern->create ($surf);
 isa_ok ($pat, 'Cairo::SurfacePattern');
 isa_ok ($pat, 'Cairo::Pattern');
 
